<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr1.lab1ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hintNombre"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txtNombre"
            android:hint="@string/hintApellido"
            android:inputType="textCapWords" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNombre"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintSexoM" />

            <RadioButton
                android:id="@+id/radioF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintSexoF" />

        </RadioGroup>

        <DatePicker
            android:id="@+id/dateNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@+id/radioGroup"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"></DatePicker>

        <AutoCompleteTextView
            android:id="@+id/autoPais"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateNacimiento"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hintPais"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/txtTel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateNacimiento"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/autoPais"
            android:hint="@string/hintTelefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/txtDir"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/autoPais"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hintDireccion" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDir"
            android:layout_marginRight="30dp"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/spinHobbies"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTel"
            android:layout_toRightOf="@+id/txtDir"
            android:entries="@array/arrayHobbies"
            android:prompt="@string/hintHobbies"></Spinner>

        <CheckBox
            android:id="@+id/checkFavorito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinHobbies"
            android:layout_toRightOf="@+id/txtEmail"
            android:text="@string/hintFavorito" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mostrar"
            android:text="@string/mostrar" />

        <ScrollView
            android:id="@+id/scrollDatos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/btnMostrar"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/txtDatos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
